@@ -1,6 +1,6 @@
 ----------------------------------------------------------------------------
                        S H O R E W A L L  4 . 4 . 9
-                               B E T A  1
+                               B E T A  2
 ----------------------------------------------------------------------------
 
 I.    RELEASE 4.4 HIGHLIGHTS
@@ -238,7 +238,8 @@ I I I.  P R O B L E M S   C O R R E C T E D   I N   T H I S  R E L E A S E
                                               expected
 
 4)  With optimize 4, if an unnecessary NONAT rule is included in
-    /etc/shorewall/rules, 'shorewall start' and/or 'shorewall restart'
+    /etc/shorewall/rules (there is no DNAT or REDIRECT rule with the
+    same source zone), then 'shorewall start' and/or 'shorewall restart'
     can fail with invalid iptables-restore input.
 
 ----------------------------------------------------------------------------
